# Sigurd

./: README.md
Components/LM2940IMP-12NOPB/: 2025-11-17_19-24-38.kicad_sym
Firmware/: .cproject  .mxproject  .project  SensorBoard Debug.launch  SensorBoard.ioc
Firmware/Debug/: SensorBoard.elf  SensorBoard.list  SensorBoard.map  makefile  objects.list  sources.mk
Hardware/: ADC.kicad_sch  Power.kicad_sch  PressureGauge.kicad_sch  RTD.kicad_sch  Sensor.kicad_pcb  Sensor.kicad_prl  Sensor.kicad_pro  Sensor.kicad_sch  Thermocouple.kicad_sch  fp-info-cache  gerber.rar
Hardware V1.1/: ADC.kicad_sch  Power.kicad_sch  PressureGauge.kicad_sch  RTD.kicad_sch  Sensor.kicad_pcb  Sensor.kicad_pro  Sensor.kicad_sch  Thermocouple.kicad_sch  fp-info-cache
Hardware/gerber/: Sensor-B_Cu.gbl  Sensor-B_Mask.gbs  Sensor-B_Paste.gbp  Sensor-B_Silkscreen.gbo  Sensor-Edge_Cuts.gm1  Sensor-F_Cu.gtl  Sensor-F_Mask.gts  Sensor-F_Paste.gtp  Sensor-F_Silkscreen.gto  Sensor-In1_Cu.g1  Sensor-In2_Cu.g2  Sensor-NPTH-drl_map.gbr  Sensor-NPTH.drl  Sensor-PTH-drl_map.gbr  Sensor-PTH.drl
zephyr-firmware/: .gitignore  Dockerfile  README.md  docker-compose.yml
zephyr-firmware/sigurd/app/: CMakeLists.txt  debug.conf  prj.conf  sample.yaml
zephyr-firmware/sigurd/app/boards/: native_sim_64.overlay
zephyr-firmware/sigurd/app/modules/ad4111/: CMakeLists.txt  Kconfig
zephyr-firmware/sigurd/app/modules/ad4111/src/: ad4111.c  no_os_spi_impl.c
zephyr-firmware/sigurd/app/src/: ad4111.c  ad4111.h  can_com.c  can_com.h  main.c  main.h  sensors.c  sensors.h  spi.c  spitest.c  spitest.h
(+93 files in other folders)
