#-------------------------------------------------------------------------------
# Zephyr Example Application
#
# Copyright (c) 2021 Nordic Semiconductor ASA
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.13.1)


list(APPEND ZEPHYR_EXTRA_MODULES
    ${CMAKE_CURRENT_SOURCE_DIR}/modules/ad4111
)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})


project(app LANGUAGES C)

target_sources(app PRIVATE src/main.c  src/can_com.c src/ad4111.c src/sensors.c)
